--- a/content/config.json
+++ b/content/config.json
@@ -27,21 +27,19 @@
     "bio": "Profle here.",
     "contacts": {
       "rss": "",
-      "email": "",
-      "github": "#",
+      "email": "truonghoanghuyenminh95@gmail.com",
+      "github": "LeBaoQuan",
       "facebook": "#",
-      "telegram": "#",
-      "twitter": "#",
+      "telegram": "",
+      "twitter": "",
       "linkedin": "#",
-      "instagram": "#",
-      "mastodon": "#",
-      "line": "",
-      "weibo": "",
-      "gitlab": "",
+      "instagram": "",
+     
+      
+
       "medium": "",
       "youtube": "",
-      "codepen": "",
-      "soundcloud": ""
+
     }
   }
 }
