--- a/content/config.json
+++ b/content/config.json
@@ -34,12 +34,14 @@
       "twitter": "",
       "linkedin": "#",
       "instagram": "",
-     
-      
-
+      "mastodon": "#",
+      "line": "",
+      "weibo": "",
+      "gitlab": "",
       "medium": "",
       "youtube": "",
-
+      "codepen": "",
+      "soundcloud": ""
     }
   }
 }
