update test blog posts

--- a/content/config.json
+++ b/content/config.json
@@ -26,22 +26,22 @@
     "photo": "/chaylungtung_pfp.jpg",
     "bio": "Profle here.",
     "contacts": {
-      "rss": "",
+      
       "email": "truonghoanghuyenminh95@gmail.com",
-      "github": "LeBaoQuan",
-      "facebook": "#",
+      
+      "facebook": "minhmuononeverland",
       "telegram": "",
       "twitter": "",
       "linkedin": "#",
       "instagram": "",
-      "mastodon": "#",
-      "line": "",
-      "weibo": "",
-      "gitlab": "",
+      
+      
+      
+      
       "medium": "",
       "youtube": "",
       "codepen": "",
-      "soundcloud": ""
+      
     }
   }
 }
