fix posts error

--- a/content/config.json
+++ b/content/config.json
@@ -17,7 +17,7 @@
       "path": "/pages/about"
     },
     {
-      "label": "Contact me",
+      "label": "Why I write blog",
       "path": "/pages/contacts"
     }
   ],
