--- a/content/config.json
+++ b/content/config.json
@@ -32,7 +32,7 @@
       "facebook": "minhmuononeverland",
       "telegram": "",
       "twitter": "",
-      "linkedin": "#",
+      "linkedin": "https://www.linkedin.com/in/minh-truong-hoang-huyen-4a473720b/",
       "instagram": "",
       
       
