everything almost ready

--- a/content/config.json
+++ b/content/config.json
@@ -24,7 +24,7 @@
   "author": {
     "name": "Truong Hoang Huyen Minh",
     "photo": "/chaylungtung_pfp.jpg",
-    "bio": "Profle here.",
+    "bio": "I haven't seen my limits yet",
     "contacts": {
       
       "email": "truonghoanghuyenminh95@gmail.com",
